# agentheim-code

./: .gitignore  CHANGELOG.md  CODEBASE_ANALYSIS.md  CODING_BAKEOFF_UI_ACCESSIBILITY_REPORT.md  CONTRIBUTING.md  LICENSE  PLAN.md  PLAN_2.0.0.md  PLAN_PROVIDER_MODEL_MANAGEMENT.md  PRODUCT_ROADMAP.md  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/web/e2e/: debug-stream.spec.ts  smoke.spec.ts
apps/web/scripts/: capture-doc-screenshots.mjs
apps/web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
apps/web/src/__tests__/: api.test.ts  context.test.tsx
apps/web/src/components/: Chat.tsx  CommandPalette.tsx  Composer.tsx  DiffViewer.tsx  ErrorBoundary.tsx  Inspector.tsx  Onboarding.tsx  ProviderWizard.tsx  Rail.tsx  SessionUsage.tsx  TerminalPanel.tsx  TopBar.tsx  WorkspaceExplorer.tsx
apps/web/src/hooks/: useApi.ts  useModalA11y.ts
apps/web/src/state/: sessionState.ts
apps/web/src/utils/: ansi.ts  time.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  BAKEOFF_REPORT.md  CLI_COMMANDS.md  FUTURE_IMPROVEMENTS.md  PRIVACY_SECURITY.md  PROVIDERS.md  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/adr/: 0001-config-surface-and-storage.md  0002-api-type-generation.md
docs/superpowers/plans/: 2026-05-23-agentheim-next-baseline.md
scripts/: package-beta.ps1  release.ps1
src/agentheim_code/: __init__.py  _serve.py  backend.py  bakeoff.py  cli.py  coder_cli.py  config.py  context_bundle.py  desktop.py  diagnostics.py  http_context.py  lifecycle.py  pricing.json  provider_capabilities.py  provider_discovery.py  provider_health.py  provider_management.py  provider_wizard.py  structured_errors.py  usage_api.py
src/agentheim_code/routes/: __init__.py  coder.py  files.py  providers.py  utils.py
src/agentheim_code/web/: index.html
src/agentheim_code/web/assets/: index-1WhwatY0.js  index-ArX0NMkj.js  index-B5nieBaH.js  index-BA2Ilzof.css  index-BBjoz6wD.js  index-BYa4ww9B.js  index-BZCIlZTy.js  index-BfCqEIDU.js  index-BfXqBeDq.js  index-Bf_mTuDL.js  index-BfawXesk.js  index-Bfg2iUIz.js  (+30 more)
src/agentheim_coder_core/: __init__.py  commands.py  models.py  runtime.py
src/agentheim_core/: __init__.py  config.py  readiness.py  runs.py  tools.py
src/config/: __init__.py  config.py
src/core/: __main__.py  agent_protocol.py  approval_workflow.py  artifact_store.py  capability_registry.py  cascading_router.py  context_packer.py  error_catalog.py  error_classification.py  errors.py  events.py  json_repair.py  ledger.py  model_registry.py  patching.py  path_security.py  policies.py  policy_engine.py  privacy_enforcer.py  public_api.py  redaction.py  replay_engine.py  resume.py  retry_engine.py  run_executor.py  run_summary.py  run_view.py  schemas_runtime.py  script_inspector.py  shell_intent.py  state_machine.py  step_budget.py  tool_invocation.py  tool_protocol.py  workflow_runner.py
src/core/repo/: __init__.py  command_detect.py  context_pack.py  language_detect.py  redaction.py  scanner.py
src/interfaces/: __init__.py  readiness.py
src/memory/: __init__.py
src/memory/tiers/: __init__.py  working.py
src/providers/: __init__.py  anthropic.py  aws_bedrock.py  azure_foundry.py  base.py  cohere.py  gemini.py  oci_genai.py  ollama_cloud.py  openai_v1.py  perplexity.py  usage.py
src/tools/: registry.py  tests.py
src/tools/browser/: __init__.py  session.py
src/tools/filesystem/: __init__.py
src/tools/git/: __init__.py  github_cli.py
src/tools/http/: __init__.py
src/tools/integrations/: __init__.py  mcp_client.py  web_research.py
src/tools/local_db/: __init__.py
src/tools/mcp/: __init__.py  client.py  config.py  pool.py  tool_adapter.py
src/tools/memory/: __init__.py
src/tools/network/: __init__.py
src/tools/shell/: __init__.py  sandbox.py
src/workflows/: __init__.py  base.py
src/workflows/coder/: __init__.py  action_engine.py  commands.py  models.py  planner.py  prompt_builder.py  repair.py  runtime.py  session_store.py  verification.py
tests/: test_auth_boundary.py  test_backend_context.py  test_backend_e2e.py  test_backend_lifecycle.py  test_backend_limits.py  test_backend_misc.py  test_backend_routes.py  test_backend_usage.py  test_bakeoff.py  test_cli.py  test_cli_provider.py  test_coder_cli.py  test_coder_runtime.py  test_coder_runtime_usage.py  test_config.py  test_context_bundle.py  test_desktop.py  test_error_classification.py  test_oci_provider.py  test_palette.py  test_pricing_registry.py  test_provider_management.py  test_provider_management_api.py  test_provider_wizard.py  test_provider_wizard_verify.py  test_readiness.py  test_serve.py  test_shell_sandbox.py  test_supportability.py  test_tool_invocation.py  test_usage_extractor.py
tests/integration/: test_real_providers.py
(+17 files in other folders)
