[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentheim-code"
version = "0.1.0"
description = "Focused local-first coding agent client built from Agentheim"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Agentheim Contributors" }]
keywords = ["ai", "coding-agent", "local-first", "developer-tools"]
dependencies = [
  "agentheim>=1.0.0",
  "typer>=0.12.3,<1.0.0",
  "rich>=13.7.1,<14.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.9.0,<1.0.0",
  "mypy>=1.14.0,<2.0.0",
]

[project.scripts]
agentheim-code = "agentheim_code.cli:main"

[tool.uv.sources]
agentheim = { path = "../agentheim", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../agentheim"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/agentheim_code"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
skip_covered = false
