[package]
name = "agentheim-code"
version = "2.0.0"
description = "Agentheim Code desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
